fixed footer and copyright alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,15 +97,15 @@ margin-bottom: 38px;
 .links {
 
 	display: flex;
+margin-top: 30px;
+justify-content: space-around;
 
-justify-content: space-between;
-padding: 0;
-
-
-	
 
 }
 
+#adress{
+	margin-right: 17%
+}
 
 
 #copyright{
